# rutorch

./: README.md  pyproject.toml
rutorch/: __init__.py
rutorch/data/linear_data/: appartements_entrainement_1000.csv
rutorch/loss/: __init__.py  mse.py
rutorch/nn/: __init__.py  linear.py
test/: test_linear_mse.py
