[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rutorch"
version = "0.1.0"
description = "A lightweight neural network library inspired by PyTorch."
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "anonrusty" }
]

dependencies = [
    "numpy>=1.24"
]

[tool.setuptools.packages.find]
include = ["rutorch*"]
